@startuml Project
class ImportedCar extends Car {
    +importedOn: int
    +originCountry: str
}

class UsedCar extends Car {
    +mileage: float
    +modifications: list
}

class NewCar extends Car {
    +concessionaire: str
}

Engine *-- Internals
Internals *-- Car

abstract class Car {
    +Car(json)

    +releaseYear: int
    +model: str
    +brand: str
    +body: str
    +priceHistory: dict
    +internals: Internals

    +short_description(): str
    +long_description(): str
}

class Internals {
    +Internals(json)

    +engine: Engine
    +transmission: str
    +4wb: bool
    +powerTrain: str
    +fuelType: str
    +fuelConsumption: float
}

class Engine {
    +Engine(json)

    +size: float
    +cylinders: int
    +inductionType: str
    +horsePower: int
    +torque: int
}

abstract class Application {
    +Application(title: str, iconPath: str, geometry: str)
    +window: Tk

    +run()
    +onstartup()
    +onclosure()
}

class App extends Application {
    +App()

    +cars: list
    +info: Text

    +onselect(evt)
    +showPriceGraph(car)
}
@enduml
